@@ -1,3 +1,7 @@
+2008-10-17 Frank Naegler  <typo3@naegler.net>
+
+	* added check of restricted groups (grouptype = 4) in listgroups application
+
 2008-10-16 Frank Naegler  <typo3@naegler.net>
 
 	* added check if resource is added before add it twice in tx_community_AccessManager->addResource()
